<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foregroundGravity="bottom"
            app:layout_constraintBottom_toTopOf="@+id/horizonal1"
            app:layout_constraintTop_toTopOf="parent">


            <android.support.constraint.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/background"
                app:layout_constraintBottom_toTopOf="@+id/guideline17"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.constraint.Guideline
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.18" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/tl_mine"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:minHeight="35dp"
                    android:padding="5dp"
                    android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.Guideline
                android:id="@+id/guideline17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.25" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foregroundGravity="center">

            <TableLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/bill_my_background"
                android:elevation="4dp"
                android:gravity="bottom"
                android:stretchColumns="*"
                app:layout_constraintBottom_toTopOf="@+id/horizontal_parent2"
                app:layout_constraintEnd_toStartOf="@+id/vertial_parent2"
                app:layout_constraintStart_toStartOf="@+id/vertial_parent1"
                app:layout_constraintTop_toTopOf="@+id/horizontal_parent1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/record_days"
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/record_deals"
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/surplus"
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/record_days"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/record_deals"
                        android:textSize="15sp"/>

                    <TextView
                        android:layout_width="1dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/record_money"
                        android:textSize="15sp" />
                </TableRow>
            </TableLayout>


            <android.support.constraint.Guideline
                android:id="@+id/horizontal_parent1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.13" />

            <android.support.constraint.Guideline
                android:id="@+id/horizontal_parent2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.32" />

            <android.support.constraint.Guideline
                android:id="@+id/vertial_parent1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.04" />

            <android.support.constraint.Guideline
                android:id="@+id/vertial_parent2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.96" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foregroundGravity="top">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:elevation="4dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/horizontal_head2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/horizontal_head1">

                <com.tcl.easybill.ui.widget.RoundImageView
                    android:id="@+id/headimage"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="fitXY"
                    android:src="@mipmap/ic_launcher"
                    app:type="circle" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/guideline20"
                app:layout_constraintStart_toStartOf="@+id/guideline18"
                app:layout_constraintTop_toTopOf="@+id/down">

                <GridView
                    android:id="@+id/button_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bill_my_background" />
            </LinearLayout>

            <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.37" />

            <android.support.constraint.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.63" />

            <android.support.constraint.Guideline
                android:id="@+id/horizontal_head1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.08" />

            <android.support.constraint.Guideline
                android:id="@+id/horizontal_head2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.26" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.04" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.96" />

            <android.support.constraint.Guideline
                android:id="@+id/down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.34" />
        </android.support.constraint.ConstraintLayout>
</FrameLayout>